--- a/styles/eventos.css
+++ b/styles/eventos.css
@@ -5,6 +5,10 @@ body {
   color: var(--gray-color-8);
 }
 
+main {
+  background-color: var(--gray-color-1);
+}
+
 .hero {
   width: 100%;
   height: var(--height-hero);
@@ -45,7 +49,7 @@ body {
   max-width: var(--max-width-view);
   margin: 2rem auto;
   border-radius: 0.875rem;
-  border: 1px solid var(--gray-color-2);
+  border: 1px solid var(--gray-color-3);
   background-color: var(--white-color);
   padding: 2rem;
 }
