--- a/styles/suma.css
+++ b/styles/suma.css
@@ -6,6 +6,10 @@ body {
 }
 
 /* Begin Main Content */
+main {
+  background-color: var(--gray-color-1);
+}
+
 .event-container {
   padding: 4rem 0;
   width: 90%;
@@ -20,22 +24,8 @@ body {
 .event-card-item {
   border-radius: 24px;
   background: var(--white-color);
-  border: 1px solid var(--gray-color-2);
-  position: relative;
-}
-
-.event-card-item::before {
-  content: '';
-  background-color: var(--white-color);
-  width: 246px;
-  height: 70px;
+  border: 1px solid var(--gray-color-3);
   box-shadow: 0 4px 21px rgba(var(--shadow-color), 25%);
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  z-index: -1;
-  margin: 0px auto;
 }
 
 .event-card-item img {
